<resources>
    <string name="app_name">OnlineFreelaceAPP</string>
    <string name="logo_name">On Line</string>
    <string name="slogo_name">The Freelancing App!</string>
    <string name="dashboard_name">The Freelancing App</string>
    <string name="powered_by">Powered By Gray Matter Developers</string>
    <string name="first_slide_title">All On Your Phone</string>
    <string name="second_slide_title">Grow Your Business</string>
    <string name="third_slide_title">Showcase Your Works</string>
    <string name="fourth_slide_title">Get Rewarded</string>
    <string name="first_slide_desc">All of that being online with the peace of mind and full control.</string>
    <string name="second_slide_desc">You won\'t miss a single opportunity to grow your business and make money.</string>
    <string name="third_slide_desc">It is your destination and find out more opportunities for your job.</string>
    <string name="fourth_slide_desc">Earn money for your work and improve your business.</string>
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Let\'s Get Started</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="buyer_request_successful">Request Successful</string>
    <string name="account_created_success">Your Account Created Successful</string>
    <string name="buyer_request_posted_success">Your Buyer Request Posted Successful</string>
    <string name="password_change_successful_msg">Your password has been successfully changed please log out and log back in using the new password</string>
    <string name="pass_change_successful">Change Password Successful</string>
    <string name="contactus_successful_msg">Message successfully sent</string>
    <string name="conus_successful">Contact Us</string>
    <string name="br_successful_msg">Your request successfully sent!</string>
    <string name="buyer_successful">Buyer request</string>
    <string name="graphic">Graphic &amp; Design</string>
    <string name="programming">Programming</string>
    <string name="writing">Writing</string>
    <string name="marketing">Digital Marketing</string>
    <string name="featured_gigs">All Featured Gigs</string>
    <string name="featured_gigs_description">All the gigs that are featured and have the top demand in app!</string>
    <string name="categories">Categories</string>
    <string name="all_gigs">Most Viewed</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>
    <string name="flyer_text">I will do creative business flyer poster design.I\'ll give you Unlimited Modification for your Design.</string>
    <string name="flyer_design">Flyer Design</string>
    <string name="todo">TODO</string>
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="favourites">FAVOURITES</string>
    <string name="my_gigs">MY GIGS</string>
    <string name="orders_to_me">ORDERS TO ME</string>
    <string name="to_be_received">TO BE RECEIVED</string>
    <string name="post_a_request">POST A REQUEST</string>
    <string name="buyer_requests">BUYER REQUESTS</string>
    <string name="contact_us">CONTACT US</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="retailer_screen">Lets\'s\nGet Started</string>
    <string name="retailer_screen_text">Get things done at your fingertips</string>
    <string name="create_account">Create\nAccount</string>
    <string name="remember_me">Remember Me</string>
    <string name="signup_screen_security">Security</string>
    <string name="signup_screen_enterpassword">Enter Password</string>
    <string name="signup_screen_confirmpassword">Confirm Password</string>
    <string name="next_page">Next</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">Username</string>
    <string name="enter_email">Email</string>
    <string name="mobile_no">Mobile</string>
    <string name="province">Province</string>
    <string name="have_account">Have A Account</string>
    <string name="post_title">Post Title</string>
    <string name="_post_request_header_name">Post a Request</string>
    <string name="how_requests_work">Post a request to our sellers.Seller will send their offers and you can choose who you would like to work with.Once you decide, you can purchase their Gig.</string>
    <string name="post_req_desc">What you need. Add a Description....</string>
    <string name="post_budget">What\'s your budget? In Rs.</string>
    <string name="post_deadline">Select Deadline Date</string>
    <string name="submit_post">Submit Your Request</string>
    <string name="cancel">Cancel</string>
    <string name="back_postreq">Back</string>
    <string name="postreq_edit_page">You can edit your request in here.</string>
    <string name="active_buyer_request">Active Buyer Request</string>
    <string name="buyer_request_desc">I am looking for a logo designer who can help me to create my logo design orders.Due to my busy schedule I am unable to work on my logo design orders.Only creative design send their offers.</string>
    <string name="budget_request">Rs.1000</string>
    <string name="post_req_send_offer">Send Offer</string>
    <string name="post_req_call">Call</string>
    <string name="post_req_message">Message</string>
    <string name="post_req_title_userview">I Need a Professional Logo Designer</string>
    <string name="send_offer">Send Offer</string>
    <string name="your_mobile_no">Your mobile no</string>
    <string name="send_offer_desc">Add description for your offer...</string>
    <string name="total_offer_amount">Total offer amount. In Rs.</string>
    <string name="becomeasellerpage_heading1">Become A Seller</string>
    <string name="become">Become A Seller</string>
    <string name="your">Your Gigs</string>
    <string name="firstgig">Create New Gig</string>
    <string name="secondgig">JavaProgramming</string>
    <string name="thirdgig">Photography</string>
    <string name="fourthgig">Vediography</string>
    <string name="fifthgig">MusicDirecting</string>
    <string name="sixthgig">C++ Programming</string>
    <string name="seventhgig">WebDesigning</string>
    <string name="welcome">Welcome</string>
    <string name="createyourgig">Create Your Gig</string>
    <string name="addimg">Add Image</string>
    <string name="gigtitle">Enter GigTitle</string>
    <string name="gigcategory">Enter Gig Category</string>
    <string name="gigdes">Enter Gig Description</string>
    <string name="deliveryinfo">Enter Delivery Information</string>
    <string name="advance_amount">Enter Advance Amount</string>
    <string name="second_amount">Enter Second Payment</string>
    <string name="condetails">Enter Contact Details</string>
    <string name="addthisgig">Add Gig</string>
    <string name="purchase">Purchase</string>
    <string name="viewgigforuser_topic">Graphic Designing</string>
    <string name="view_gig_user_addimg">Gig Title</string>
    <string name="fetching_data">Fetching data</string>
    <string name="view_user_graphicdesigning">I\'m Creating Any kind of graphic designing projects for you</string>
    <string name="view_user_gigcat">Gig Category</string>
    <string name="hint2">Graphic Designing</string>
    <string name="topic2">Gig Category</string>
    <string name="hint22">Graphic Designing</string>
    <string name="topic3">Gig Description</string>
    <string name="hint3">I will do any kind of graphic designing projects for you. I need every information from you before create your project. I want to contact you every day.</string>
    <string name="topic4">Delivery Information</string>
    <string name="hint4">Home Delivery</string>
    <string name="topic5">Pricing Information</string>
    <string name="hint5">Starting Price is 5$</string>
    <string name="topicfirstin_viewgigforuser">Gig Title</string>
    <string name="topic6">Pricing Information</string>
    <string name="updatebutton">Update</string>
    <string name="deletebutton">Delete</string>
    <string name="advance_amount_topic">Advance Amount</string>
    <string name="price">Price</string>
    <string name="empty_list">Oops ! No records found..</string>
    <string name="second_payment">Second Payment</string>
    <string name="contact">Contact Number</string>
    <string name="show_more">Show more</string>
    <string name="updatepage_saveupdate_btm">Save Changes</string>
    <string name="purchasegigbutton">Purchase</string>
    <string name="title_activity_orders_to_me">Orders To Me</string>
    <string name="tabtext_processing">Processing</string>
    <string name="tabtext_completed">Completed</string>
    <string name="tabtext_received">Received</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_orders_to_be_received">Orders To Be Received</string>
    <string name="revieworder">Review Order</string>
    <string name="titleReviewOrder">"Add responsible order information  to get better service. "</string>
    <string name="orderdetails">Order Details</string>
    <string name="orderworkingemail">Enter Working Email Address</string>
    <string name="statereqorder">State Your Requirement</string>
    <string name="ordersummery">Order Summery</string>
    <string name="ordersummary">Order Summery</string>
    <string name="subtotal">Sub Total($)</string>
    <string name="servicecharge">Service Charge($)</string>
    <string name="total">Total($)</string>
    <string name="selectpaymentmethod">Select Payment Method</string>
    <string name="EnterOrderResourceLink">Copy here Your Order Resources Drive Link</string>
    <string name="ordersuccessfull">Order Added Successfully</string>
    <string name="OK">OK</string>
    <string name="processingorder">Processing Order</string>
    <string name="name1">About Us</string>
    <string name="aboutusdes">Today the use of mobile phones has increased among many people.
        It has anumber of positive aspects. For example, we use this to facilitate most of our
        daily activities. While our team was looking for a solution to such problems, we came up
        with an idea to create something new. That is Online Freelancing Application. Using this
        we can provide services to customers and also get services from customers. It also allows
        talented people to spend their talents and earn valuable money</string>
    <string name="mainp">The Main Purpose</string>
    <string name="maindes">To improve the interaction between the customers who use this system and
        to provide a great service to each other.</string>
    <string name="changepa1">Change Password</string>
    <string name="oldp">Old Password</string>
    <string name="newp">New Password</string>
    <string name="connp">Confirm New Password</string>
    <string name="uname">Username</string>
    <string name="logoutbt">Log Out</string>
    <string name="deact">Deactivate account</string>
    <string name="contact1">Contact Us</string>
    <string name="conname">Name</string>
    <string name="conusd">Description</string>
    <string name="sub">Submit</string>
    <string name="cus">Call Us</string>
    <string name="reqdesc">Your request successfully sent!</string>
    <string name="breq">Buyer Request</string>
    <string name="mail">Your Email</string>
    <string name="bdes">Buyer Description</string>
    <string name="CGO">Confirm Getting Order</string>
    <string name="cat">Category</string>
    <string name="gdname">Graphic and Design</string>
    <string name="Progname">Programming</string>
    <string name="writ">Writing</string>
    <string name="dmname">Digital Marketing</string>
</resources>