<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    tools:context=".Create_A_Gig">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="20dp">

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="20dp"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardCornerRadius="32dp"
            app:cardElevation="60dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_cover"
                    android:layout_width="150dp"
                    app:civ_border_color="@color/card1"
                    app:civ_border_width="1dp"
                    android:layout_height="150dp"
                    android:src="@drawable/freelancer"></de.hdodenhof.circleimageview.CircleImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/topicfirstin_viewgigforuser"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_title"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/custom_input"
                    android:editable="false"
                    android:hint="@string/gigtitle"
                    android:inputType="text"
                    android:paddingLeft="10dp"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/topic2"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_category"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/custom_input"
                    android:editable="false"
                    android:hint="@string/gigcategory"
                    android:inputType="text"
                    android:paddingLeft="10dp"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/topic3"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_description"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/custom_input"
                    android:editable="false"
                    android:hint="@string/gigdes"
                    android:inputType="text"
                    android:paddingLeft="10dp"
                    android:textSize="20dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/topic4"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_delivery_info"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/custom_input"
                    android:editable="false"
                    android:hint="@string/deliveryinfo"
                    android:inputType="text"
                    android:paddingLeft="10dp"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/price"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_amount"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/custom_input"
                    android:editable="false"
                    android:hint="@string/advance_amount"
                    android:inputType="numberDecimal"
                    android:paddingLeft="10dp"
                    android:textSize="20dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/contact"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_contact"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/custom_input"
                    android:editable="false"
                    android:hint="@string/condetails"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:paddingLeft="10dp"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/btn_buy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_button"
                    android:text="@string/purchase"
                    android:textColor="@color/colorWhite">

                </Button>


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


</androidx.core.widget.NestedScrollView>