<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Create_A_Gig"
    android:background="@drawable/bg3">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout

            android:layout_marginTop="32dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/creategigtextup1"
                android:text="@string/welcome"
                android:textSize="32sp"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>


            <TextView
                android:layout_below="@+id/creategigtextup2"
                android:text="@string/createyourgig"
                android:layout_marginTop="38dp"
                android:textSize="24sp"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UnknownId">
            </TextView>






        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="20dp"
            app:cardCornerRadius="32dp"
            app:cardElevation="60dp"
            android:background="@color/cardview_light_background">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageButton
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/freelancer">
                </ImageButton>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addimg"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_marginTop="0dp">

                </TextView>



                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/gigtitle"
                    android:textSize="20dp"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/custom_input"/>
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/gigcategory"
                    android:textSize="20dp"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/custom_input"/>
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:hint="@string/gigdes"
                    android:textSize="20dp"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/custom_input" />
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:hint="@string/deliveryinfo"
                    android:textSize="20dp"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/custom_input" />
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:hint="@string/pricinginfo"
                    android:textSize="20dp"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/custom_input" />
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/condetails"
                    android:textSize="20dp"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/custom_input" />
                <Button
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:text="@string/addthisgig">

                </Button>



            </LinearLayout>

        </androidx.cardview.widget.CardView>



    </LinearLayout>


</ScrollView>