<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View_Gig_For_Admin"
    android:background="@drawable/bg">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout

            android:layout_marginTop="32dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:src="@drawable/view1"
                android:layout_marginTop="35dp"
                android:layout_marginLeft="105dp">

            </ImageView>


        </RelativeLayout>

        <TextView
            android:layout_width="259dp"
            android:layout_height="50dp"
            android:text="@string/viewgigforuser_topic"
            android:textSize="25dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginTop="-15dp"
            android:layout_marginLeft="98dp">

        </TextView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="20dp"
            app:cardCornerRadius="32dp"
            app:cardElevation="60dp"
            android:background="@color/cardview_light_background">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-90dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/topicfirstin_viewgigforuser"
                    android:textColor="#000000"
                    android:textSize="24dp"
                    android:textStyle="bold">

                </TextView>
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:hint="@string/hint3"
                    android:textSize="20dp"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/custom_input"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-70dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/topic2"
                    android:textColor="#000000"
                    android:textSize="24dp"
                    android:textStyle="bold">

                </TextView>
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:hint="@string/hint22"
                    android:textSize="20dp"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/custom_input"/>









                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-60dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/topic3"
                    android:textColor="#000000"
                    android:textSize="24dp"
                    android:textStyle="bold">

                </TextView>
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:hint="@string/hint3"
                    android:textSize="20dp"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/custom_input"/>




                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/topic4"
                    android:textColor="#000000"
                    android:textSize="24dp"
                    android:textStyle="bold">

                </TextView>
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:hint="@string/hint4"
                    android:textSize="20dp"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/custom_input"/>




                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/topic5"
                    android:textColor="#000000"
                    android:textSize="24dp"
                    android:textStyle="bold">

                </TextView>
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:hint="@string/hint5"
                    android:textSize="20dp"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/custom_input"/>



                <RelativeLayout

                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <Button
                        android:id="@+id/updatebutten_byadmin"
                        android:layout_width="90dp"
                        android:layout_height="60dp"
                        android:text="@string/purchasegigbutton">

                    </Button>



                </RelativeLayout>




            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

</ScrollView>